--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ reqwest = {version = "0.11.9", features = ["json"] }
 shiplift = "0.7.0"
 tokio = { version = "1.16.1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
+eyre = "0.6.6"
+stable-eyre = "0.2.2"
