--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 eyre = "0.6.6"
 stable-eyre = "0.2.2"
 chrono = "0.4"
+tracing = {version = "0.1.31", features = ["max_level_info"]}
+tracing-bunyan-formatter = "0.3.2"
+tracing-subscriber = "0.3.9"
+log = {version = "0.4.14", features = ["max_level_info"]}
