--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ tracing = {version = "0.1.31", features = ["max_level_info"]}
 tracing-bunyan-formatter = "0.3.2"
 tracing-subscriber = "0.3.9"
 log = {version = "0.4.14", features = ["max_level_info"]}
+serde_json = "1.0.79"
