--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.3"
 
 services:
   loki:
-    image: grafana/loki:2.4.2
+    image: grafana/loki:2.7.4
     ports:
       - "127.0.0.1:3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
@@ -18,6 +18,8 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     depends_on:
       - loki
+    ports:
+      - "127.0.0.1:9898:9898"
     restart: always
 
 
