--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-futures = "0.3.21"
-reqwest = { version = "0.11.9", features = ["json"] }
-shiplift = { version = "0.7.0", features = ["chrono"] }
-tokio = { version = "1.16.1", features = ["full"] }
-serde = { version = "1.0", features = ["derive"] }
+futures = "*"
+reqwest = { version = "*", features = ["json"] }
+shiplift = { version = "*", features = ["chrono"] }
+tokio = { version = "*", features = ["full"] }
+serde = { version = "*", features = ["derive"] }
 eyre = "0.6.6"
 stable-eyre = "0.2.2"
 chrono = "0.4"
-tracing = { version = "0.1.31", features = ["max_level_info"] }
-tracing-subscriber = "0.3.9"
-log = { version = "0.4.14", features = ["max_level_info"] }
+tracing = { version = "*", features = ["max_level_info"] }
+tracing-subscriber = { version = "*", features = ["env-filter"] }
+log = { version = "*", features = ["max_level_info"] }
 prometheus = "0.13.3"
 hyper = "0.14.25"
 lazy_static = "1.4.0"
